fix img overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -225,7 +225,7 @@ nav .nav-container li a:hover {
   left: 50%;
   translate: -50% -50%;
   width: min(80%, 1000px);
-  height: 80vh;
+  height: 80svh;
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -237,7 +237,17 @@ nav .nav-container li a:hover {
 #post-float #post-float-content #post-float-img-cont {
   display: grid;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  min-height: 0; /* A grid elemek alapból nem lehetnek kisebbek, mint tartalmuk */
   background-color: black;
+}
+
+#post-float #post-float-content #post-float-img-cont #post-float-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  overflow: hidden;
 }
 
 #post-float #post-float-content #post-float-text {
